@@ -1,3 +1,7 @@
+ext3grep-0.1.2
+
+	Output error message if device can't be opened.
+
 ext3grep-0.1.1
 
 	Added largefile support; 64-bit off_t.
